# hardpycover

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG  CHANGELOG.md  LICENSE  Makefile  README.md  hardcover_schema.json  main.py  pyproject.toml
hardcoverpy/: __init__.py  filter.py  main.py  utils.py
hardcoverpy/classes/: __init__.py  author.py  book_categories.py  book_characters.py  books.py  characters.py  contributors.py  editions.py  image.py  language.py  publishers.py  search.py  user.py  user_stats.py  userbooks.py  utils.py
hardcoverpy/core/: base.py  const.py  exceptions.py  http.py  query.py
hardpycover/: __init__.py  filter.py  main.py  mutations.py  queries.py  schema.py  stats.py
hardpycover/classes/: __init__.py  activities.py  author.py  book_categories.py  book_characters.py  books.py  characters.py  contributors.py  countries.py  editions.py  goals.py  image.py  language.py  lists.py  notifications.py  platforms.py  prompts.py  publishers.py  reading_formats.py  reading_journals.py  search.py  series.py  user.py  user_stats.py  userbook_stats.py  userbooks.py  utils.py
hardpycover/core/: __init__.py  base.py  exceptions.py  http.py  query.py
tests/: conftest.py  test_auth.py  test_me.py  test_query_limit.py  test_rate_limit.py
