[project]
name = "hardpycover"
version = "0.1.0"
description = "Hardcover API wrapper for Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
]
keywords = ["hardcover", "api", "wrapper"]

maintainers = [
  {name = "Jay Cruz", email = "jccruz009@yahoo.com"}
]

[project.optional-dependencies]
with_sgql = [
	"sgqlc"
]
