[project]
name = "hardpycover"
version = "0.1.1"
description = "Hardcover API wrapper for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "urllib3>=2.4.0",
]
keywords = ["hardcover", "api", "wrapper", "graphql"]

maintainers = [
  {name = "Jay Cruz", email = "jccruz009@yahoo.com"}
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"

[project.optional-dependencies]
with_sgql = [
	"sgqlc"
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.uv.build-backend]
module-name = "hardcoverpy"
module-root = ""