[project]
name = "hardpycover"
version = "0.1.3"
description = "Hardcover API wrapper for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "sgqlc>=16.4"
]
keywords = ["hardcover", "api", "wrapper", "graphql"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


maintainers = [
  {name = "Jay Cruz", email = "jccruz009@yahoo.com"}
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"

[project.optional-dependencies]
with_sgql = [
	"sgqlc"
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.uv.build-backend]
module-name = "hardpycover"
module-root = ""

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"

[tool.basedpyright]
ignore = ["hardpycover/schema.py"]

reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnusedCallResult = "none"
reportMissingTypeStubs = "none"
